# webapp_telegram_fastapi

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: dependencies.py  settings.py
app/api/: main.py
app/api/routes/: telegram.py
app/core/: config.py  env.py
app/db/: mongo.py
app/handlers/start/: keyboards.py  start.py
app/models/: users.py
app/routers/: welcome.py
backend/: main.py  pyproject.toml  worker.py
backend/app/api/: depends.py  main.py
backend/app/api/routes/: mailing.py  main.py  telegram.py  users.py  webapp.py
backend/app/core/: config.py  db.py  env.py  security.py
backend/bot/: dispatcher.py  models.py  sender.py
backend/bot/handlers/: member.py  start.py
backend/core/: config.py  db.py  env.py  security.py
bot/: dispatcher.py  models.py
bot/handlers/: start.py
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.js  vite.config.ts
frontend/src/: App.svelte  app.css  app.html  telegram.css
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/auth/: +page.svelte
frontend/src/routes/mailing/: +page.svelte
frontend/src/services/: api.ts  telegramAuth.ts
src/: database.py  dependencies.py  exceptions.py  main.py  settings.py
src/handlers/start/: keyboards.py  start.py
src/routers/: users.py
templates/: base.html  user.html
