[project]
name = "webapp-telegram-fastapi"
version = "0.1.0"
description = "Web application skeleton for building a Telegram bot using FastAPI and Python Telegram Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.0",
    "fastapi>=0.118.0",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "pymongo>=4.15.2",
    "python-telegram-bot>=22.5",
]
