[project]
name = "webapp-telegram-fastapi"
version = "0.1.0"
description = "Web application skeleton for building a Telegram bot using FastAPI and Python Telegram Bot"
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
    "aio-pika>=9.5.6",
    "beanie>=2.0.0",
    "fastapi>=0.118.0",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.2",
    "python-jose>=3.5.0",
    "python-telegram-bot>=22.5",
    "uvicorn>=0.37.0",
]


[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
ensure_newline_before_comments = true
force_grid_wrap = 0
known_first_party = ["app", "bot", "core"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.isort]
known_first_party = ["app", "bot", "core"]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
allow_redefinition = false
allow_untyped_globals = false
follow_imports = "silent"
files = ["app", "bot", "core"]
exclude = ["tests/"]